Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17645

Newly added APIC ACPI HAL logs 'Invalid image DOS signature!' early on amd64 LiveCD

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Bootloader

    Description

      APIC HALs were enabled by 0.4.15-dev-2720-g5ee0925 (and previous).
      BootCD has 'Standard APIC' and 'ACPI APIC',
      LiveCD has 'APIC ACPI'.

      NB:
      I cannot test amd64 BootCD, due to immediate crash at Stage 1. (Separate issue.)

      QEMU 0.10.5, x86_64 VM

      reactos-livecd-0.4.15-dev-2720-g5ee0925-x64-msvc-win-dbg
      reactos-livecd-0.4.15-dev-2790-ge8277e5-x64-msvc-win-dbg

      One additional log, compared to i386 build:
      not a big deal at current state, but suspicious.

      (C:\buildbot_config\worker\Build_MSVC_x64\build\boot\freeldr\freeldr\disk\partition.c:425) fixme: DiskGetPartitionEntry() unimplemented for RAW
      (C:\buildbot_config\worker\Build_MSVC_x64\build\boot\freeldr\freeldr\ntldr\registry.c:381) err: Did not find sub key 'BiosInfo' (full \Registry\Machine\SYSTEM\CurrentControlSet\Control\BiosInfo)
      (C:\buildbot_config\worker\Build_MSVC_x64\build\boot\freeldr\freeldr\ntldr\winldr.c:621) fixme: LoadWindowsCore: SOS - TRUE (not implemented)
      (sdk\lib\rtl\image.c:192) Invalid image DOS signature!
      0000? b ÇÇø?  02      R    °  (ntoskrnl\kd64\kdinit.c:74) -----------------------------------------------------
      [...]
      

      Attachments

        Issue Links

          Activity

            People

              hbelusca hbelusca
              Serge Gautherie Serge Gautherie
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: