[FREELDR] LoadModule(): Add error handling

- LoadModule(): Check/log errors.
- LoadWindowsCore(): Check/log/return LoadModule() failures.

CORE-17645